--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.2",
+    "mongo": "^0.1.0",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
