--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,18 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^5.5.3",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
-    "mongoose": "^7.5.3",
+    "mongoose": "^7.6.4",
+    "mongoose-gridfs": "^1.3.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
