--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
+    "stripe": "^14.3.0",
     "validator": "^13.11.0"
   }
 }
