--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "slugify": "^1.6.6",
     "stripe": "^14.3.0",
     "validator": "^13.11.0"
