--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "react-animated-slider": "^2.0.0",
     "react-highlight-words": "^0.20.0"
   }
 }
