--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -14,7 +14,19 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.18",
+    "buffer": "^6.0.3",
+    "react-file-viewer": "^1.2.1",
+    "react-image-magnifiers": "^1.4.0",
+    "react-mic": "^12.4.6",
+    "react-pdf": "^7.5.1",
+    "socket.io-client": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
