--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +15,14 @@
     "axios": "^1.6.1",
     "multer-gridfs-storage": "^5.0.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
+    "useref": "^1.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
