--- a/react-app/clinic-frontend/package.json
+++ b/react-app/clinic-frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.1",
     "multer-gridfs-storage": "^5.0.2",
     "react": "^18.2.0",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.18.0",
