--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -18,8 +18,10 @@
     "history": "^5.3.0",
     "multer-gridfs-storage": "^5.0.2",
     "react": "^18.2.0",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-file-viewer": "^1.2.1",
+    "react-highlight-words": "^0.20.0",
     "react-image-magnifiers": "^1.4.0",
     "react-mic": "^12.4.6",
     "react-pdf": "^7.5.1",
