--- a/New folder/react-app/clinic-frontend/package.json
+++ b/New folder/react-app/clinic-frontend/package.json
@@ -3,20 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.10.0",
     "axios": "^1.6.1",
+    "buffer": "^6.0.3",
+    "history": "^5.3.0",
     "multer-gridfs-storage": "^5.0.2",
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^1.2.1",
     "react-highlight-words": "^0.20.0",
+    "react-image-magnifiers": "^1.4.0",
+    "react-mic": "^12.4.6",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
