--- a/socket/package.json
+++ b/socket/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moongose": "^1.0.0",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
