--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -17,6 +17,7 @@
     "buffer": "^6.0.3",
     "history": "^5.3.0",
     "multer-gridfs-storage": "^5.0.2",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
