--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -31,6 +31,7 @@
     "react-stripe-checkout": "^2.6.3",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
