--- a/clinic-frontend/package.json
+++ b/clinic-frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.1",
     "buffer": "^6.0.3",
     "history": "^5.3.0",
+    "mongoose": "^8.0.3",
     "multer-gridfs-storage": "^5.0.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
